Calculate settings/punctuation morekeys based on coord

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -264,6 +264,9 @@
         "tablet_period": [
             "!text/morekeys_tablet_punctuation"
         ],
+        "bottomrow_comma": [
+            "!icon/action_settings|!code/action_settings"
+        ],
         "exclamation": [
             "¡",
             "‽"
