Add "/"  to the ñ character in Spanish layout

--- a/tools/make-keyboard-text-py/locales/es.json
+++ b/tools/make-keyboard-text-py/locales/es.json
@@ -91,5 +91,8 @@
     "keylabel": {},
     "keyhintlabel": {},
     "additional_morekeys": {},
-    "other": {}
+    "other": {},
+    "qwertysyms": {
+        "ñ": "/"
+    }
 }
