Update Ukrainian moreKeys (#1095)

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -114,6 +114,7 @@
         "cyrillic_i": [],
         "cyrillic_ie": [],
         "cyrillic_soft_sign": [],
+        "misc_code_u044c": [],
         "swiss_row1_11": [],
         "swiss_row2_10": [],
         "swiss_row2_11": [],
