Add ability to shift+enter from symbols menu

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -377,6 +377,17 @@
             "!icon/action_undo|!code/action_undo",
             "!icon/action_redo|!code/action_redo"
         ],
+        "emoji_action_key_shift_enter": [
+            "!fixedColumnOrder!4",
+            "!needsDividers!",
+            "!icon/action_switch_language|!code/action_switch_language",
+            "!icon/action_text_edit|!code/action_text_edit",
+            "!icon/action_clipboard_history|!code/action_clipboard_history",
+            "!icon/action_emoji|!code/action_emoji",
+            "!icon/enter_key|!code/key_shift_enter",
+            "!icon/action_undo|!code/action_undo",
+            "!icon/action_redo|!code/action_redo"
+        ],
         "emoji_action_key_navigation": [
             "!fixedColumnOrder!4",
             "!needsDividers!",
