Add labels for ABC menu, fix currency symbol

--- a/tools/make-keyboard-text-py/locales/ja.json
+++ b/tools/make-keyboard-text-py/locales/ja.json
@@ -1,7 +1,9 @@
 {
   "locale": "ja",
   "morekeys": {},
-  "keyspec": {},
+  "keyspec": {
+    "currency": "¥"
+  },
   "label": {},
   "keylabel": {
     "to_alpha": "←"
