--- a/tools/make-keyboard-text-py/locales/ru.json
+++ b/tools/make-keyboard-text-py/locales/ru.json
@@ -23,5 +23,9 @@
     "other": {
         "single_quotes": "!text/single_9qm_lqm",
         "double_quotes": "!text/double_9qm_lqm"
+    },
+    "qwertysyms": {
+        "x": ["\"", "»", "«"],
+        "c": ["'", "›", "‹"]
     }
 }
