Update Armenian comma

--- a/tools/make-keyboard-text-py/locales/hy.json
+++ b/tools/make-keyboard-text-py/locales/hy.json
@@ -33,8 +33,8 @@
         ]
     },
     "keyspec": {
-        "comma": "՝",
-        "tablet_comma": "՝",
+        "comma": ",",
+        "tablet_comma": ",",
         "period": "։",
         "tablet_period": "։",
         "currency": "֏"
