feat: Add Quick Settings tile to temporarily hide keyboard
Closes #1787

Adds a Quick Settings tile (API 24+) that allows users to temporarily
suppress the keyboard from appearing. When enabled, the keyboard will
not pop up when text fields are focused.

Changes:
- Add HideKeyboardTileService for Quick Settings toggle
- Add KEYBOARD_SUPPRESSED preference to Settings.kt
- Modify LatinIME to check suppress flag in onShowInputRequested()
  and onEvaluateInputViewShown()
- Add ic_keyboard_hide drawable and string resources
- Register TileService in AndroidManifest.xml

--- a/java/res/values/strings.xml
+++ b/java/res/values/strings.xml
@@ -274,4 +274,11 @@ mobile devices. [CHAR LIMIT=25] -->
          This resource is copied from packages/apps/Settings/res/values/strings.xml -->
     <!-- This resource is corresponding to msgid="5433275485499039199" -->
     <string name="user_dict_fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
+
+    <!-- Quick Settings tile for hiding keyboard -->
+    <string name="qs_tile_hide_keyboard_label">Keyboard</string>
+    <string name="qs_tile_keyboard_normal">Keyboard</string>
+    <string name="qs_tile_keyboard_suppressed">Keyboard Off</string>
+    <string name="qs_tile_keyboard_suppressed_toast">Keyboard will not appear automatically</string>
+    <string name="qs_tile_keyboard_enabled_toast">Keyboard will appear normally</string>
 </resources>
