Fix long-pressable [ ] { } < >

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -543,12 +543,12 @@
         "w": "\\\\",
         "e": "|",
         "r": "=",
-        "t": "[",
-        "y": "]",
-        "u": "<",
-        "i": ">",
-        "o": "{",
-        "p": "}",
+        "t": "!text/keyspec_left_square_bracket",
+        "y": "!text/keyspec_right_square_bracket",
+        "u": "!text/keyspec_less_than",
+        "i": "!text/keyspec_greater_than",
+        "o": "!text/keyspec_left_curly_bracket",
+        "p": "!text/keyspec_right_curly_bracket",
 
         "a": "@",
         "s": "#",
